--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,51 @@
-.App {
-  text-align: center;
+
+*{
+  margin: 0;
+  padding: 0;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.header{
+  background-color:cadetblue;
+  height: 15vh;
   display: flex;
+  justify-content:flex-start;
+  flex-direction: column;
+}
+
+.main{
+  height: 70vh;
+  display: flex;
+  justify-content: center;
   flex-direction: column;
   align-items: center;
+  background-color:rgb(116, 178, 181);
+}
+
+button{
+  width: 80px;
+  height: 50px;
+  background-color: coral;
+}
+
+.circle {
+  height: 200px;
+  width: 200px;
+  border-radius: 50%;
+  background-color: coral;
+  margin: 20px;
+  display: flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  font-size: 60px;
+  border: 10px groove black;
 }
 
-.App-link {
-  color: #61dafb;
+.footer{
+  background-color:cadetblue;
+  height: 15vh;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
